--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  mockito: ^5.0.16
+
 dev_dependencies:
+  build_runner: ^2.1.5
   flutter_test:
     sdk: flutter
 
